--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import Footer from "../components/Footer1.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/logo/caffia.png">
     <link rel="stylesheet" href="/assets/style.css" />
     <link
       rel="stylesheet"
@@ -24,7 +24,7 @@ import Footer from "../components/Footer1.astro";
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>Caffia</title>
   </head>
   <body>
     <Header />
