--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import CoffeeCard from "../components/CoffeeCard.astro"
+import Layout from "../layouts/Layout.astro";
+import CoffeeCard from "../components/CoffeeCard.astro";
+import Tabswitcher from "../components/Tabswitcher.jsx";
 
 ---
 
@@ -388,6 +389,7 @@ import CoffeeCard from "../components/CoffeeCard.astro"
 	</div>
 </div>
 
+<Tabswitcher client:load/>
 
 </Layout>
   
