chore: comment out Tabswitcher import and usage in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import CoffeeCard from "../components/CoffeeCard.astro";
-import Tabswitcher from "../components/Tabswitcher.jsx";
+//import Tabswitcher from "../components/Tabswitcher.jsx";
 
 ---
 
@@ -389,7 +389,7 @@ import Tabswitcher from "../components/Tabswitcher.jsx";
 	</div>
 </div>
 
-<Tabswitcher client:load/>
+<!-- <Tabswitcher client:load/> -->
 
 </Layout>
   
