Refactor CoffeeCard component and update API integration; add Loader component for loading state; create blog and menus pages with layout and header banner

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,27 +18,12 @@
 
         <!-- Navigation Links -->
         <div class="hidden md:flex items-center gap-10 md:pr-8">
-            <!-- Shop Dropdown -->
-            <div class="relative">
-                <button id="shopButton" class="font-semibold text-white hover:text-BrandyPunch duration-300 flex items-center">
-                    SHOP
-                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="ml-1">
-                        <path d="m6 9 6 6 6-6"/>
-                    </svg>
-                </button>
-
-                <!-- Dropdown Menu -->
-                <div id="shopDropdown" class="hidden absolute p-4 rounded-md top-full shadow-lg w-28 bg-BrandyPunch z-50">
-                    <a href="#" class="block px-2 py-1 text-white text-center hover:bg-BrandyPunch/80 rounded-md">Coffee 1</a>
-                    <a href="#" class="block px-2 py-1 text-white text-center hover:bg-BrandyPunch/80 rounded-md">Coffee 2</a>
-                </div>
-            </div>
-
             <!-- Other Links -->
             <ul class="flex gap-5">
+                <li><a href="/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Home</a></li>
                 <li><a href="/about-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">About Us</a></li>
-                <li><a href="#" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Instant Coffee</a></li>
-                <li><a href="#" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Bestsellers</a></li>
+                <li><a href="/menus" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Instant Coffee</a></li>
+                <li><a href="/blog" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Blogs</a></li>
                 <li><a href="/contact-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Contact Us</a></li>
             </ul>
         </div>
