--- a/src/components/CoffeeCard.astro
+++ b/src/components/CoffeeCard.astro
@@ -5,21 +5,23 @@ import { fetchProgram } from "./api.js"
 type Program = {
   id: number,
   title: string,
-  price: number,
+  amount: number,
   description: string,
-  image: string,
+  imageUrl: string,
   ingredients: string[],
   totalSales: number
 }
 
 const coffeePrograms: Program[] = await fetchProgram();
+console.log(coffeePrograms);
+
 ---
 <div class=" lg:mx-24 md:mx-8 mx-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
   {coffeePrograms?.length > 0 ? (
     coffeePrograms.map((item) => (
-      <div key={item.id} class="bg-white rounded-2xl shadow-md overflow-hidden hover:shadow-xl transition-all duration-300 flex flex-col">
+      <div data-id={item.id} class="bg-white rounded-2xl shadow-md overflow-hidden hover:shadow-xl transition-all duration-300 flex flex-col">
         <img 
-          src={item.image} 
+          src={item.imageUrl} 
           alt={item.title} 
           class="w-full h-60 object-cover"
           loading="lazy"
@@ -31,7 +33,7 @@ const coffeePrograms: Program[] = await fetchProgram();
 
           <div class="mt-auto flex items-center justify-between">
             <span class="text-lg font-bold text-brown-700">
-              ${(item.price ?? 0).toFixed(2)}
+              ${(item.amount ?? 0).toFixed(2)}
             </span>
             <button 
               class="bg-brown-600 hover:bg-brown-700 text-white px-4 py-2 rounded-lg transition"
