Implement TabSwitcher component with dynamic tabs and cards; add empty privacy policy and terms and conditions pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@
             <ul class="flex gap-5">
                 <li><a href="/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Home</a></li>
                 <li><a href="/about-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">About Us</a></li>
-                <li><a href="/menus" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Instant Coffee</a></li>
+                <li><a href="/menus" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">]Menus</a></li>
                 <li><a href="/blog" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Blogs</a></li>
                 <li><a href="/contact-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">Contact Us</a></li>
             </ul>
