--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro"
-// import CoffeeCard from "../components/CoffeeCard.astro"
+import CoffeeCard from "../components/CoffeeCard.astro"
 
 ---
 
@@ -53,7 +53,7 @@ import Layout from "../layouts/Layout.astro"
 				 discover your new favorite ritual.”
 		</p>
 	   </div>
-	   <!-- <CoffeeCard /> -->
+	   <CoffeeCard />
 
 	   <div class="container mx-auto">
 		<div class="mt-12 lg:px-28 md:px-16 px-4 py-10">
